--- a/css/main.css
+++ b/css/main.css
@@ -5,16 +5,12 @@
   border: 3px solid black;
   background-color: #282727;
 }
-
-
-
 .nav-header {
   width: 360px;
   height: 80px;
   background: #212121;
   display: flex;
 }
-
 .menu {
   width: 24px;
   height: 24px;
@@ -26,9 +22,6 @@
   background-size: cover;
   background-position: center;
 }
-
-
-
 .text-header {
   width: 145px;
   height: 24px;
@@ -40,4 +33,308 @@
   margin-top: 40px;
   margin-left: 56px;
   color: #FFFFFF;
+  
+}
+
+.info1 {
+  background-image: url('../img/infoImg/info1.png');
+  background-size: cover;
+  background-position: center;
+  border: 3px solid #282727;
+  width: 344px;
+  height: 260px;
+  margin-left: 6px;
+  margin-top: 30px;
+}
+
+.info2 {
+  background-image: url('../img/infoImg/info2.png');
+  background-size: cover;
+  background-position: center;
+  border: 3px solid #282727;
+  width: 344px;
+  height: 260px;
+  margin-left: 6px;
+  margin-top: 30px;
+}
+
+.info3 {
+  background-image: url('../img/infoImg/info3.png');
+  background-size: cover;
+  background-position: center;
+  border: 3px solid #282727;
+  width: 344px;
+  height: 260px;
+  margin-left: 6px;
+  margin-top: 30px;
+}
+
+.info4 {
+  background-image: url('../img/infoImg/info4.png');
+  background-size: cover;
+  background-position: center;
+  border: 3px solid #282727;
+  width: 344px;
+  height: 260px;
+  margin-left: 6px;
+  margin-top: 30px;
+}
+
+.info5 {
+  background-image: url('../img/infoImg/info5.png');
+  background-size: cover;
+  background-position: center;
+  border: 3px solid #282727;
+  width: 344px;
+  height: 260px;
+  margin-left: 6px;
+  margin-top: 30px;
+}
+
+.info-block{
+  width: 344px;
+  height: 68px;
+  margin-top: 192px;
+  background: #39784E99;
+  display: flex;
+  
+}
+.info-text{
+  color: #FFFFFF;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  width: 245px;
+}
+
+.favorite {
+  background-image: url('../img/like.png');
+  background-size: cover;
+  background-position: center;
+  width: 27px;
+  height: 24px;
+  margin-right: 30px;
+  margin-top: 12px;
+}
+
+.share {
+  width: 27px;
+  height: 24px;
+  background-image: url('../img/share.png');
+  background-size: cover;
+  background-position: center;
+  margin-right: 13px;
+  margin-top: 12px;
+}
+
+.buttons {
+  display: flex;
+  margin-top: 12px;
+  margin-top: 0;
+}
+.back {
+  background-image: url('../img/ArrowsImg/back.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 120px;
+  height: 48;
+}
+
+.home {
+  background-image: url('../img/ArrowsImg/home.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 120px;
+  height: 48;
+}
+
+.recent {
+  background-image: url('../img/ArrowsImg/recent.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 120px;
+  height: 48;
+}
+.navbar {
+  width: 360px;
+  height: 592px;
+  background-color: #FFFFFF;
+  margin-left: 550px;
+}
+.block{
+  display: flex;
+}
+.side-block{
+  width: 300px;
+  height: 592px;
+  border: 1px solid #282727;
+}
+.background {
+  background-image: url('../img/ground.png');
+  background-size: cover;
+  background-position: center;
+  width: 300px;
+  height: 200px;
+  border: 1px solid #282727;
+}
+
+.sideCl {
+  background-color: #212121;
+  height: 592px;
+  width: 60px;
+  border: 1px solid #282727;
+}
+
+.avatar {
+  background-image: url('../img/avatar.png');
+  background-size: cover;
+  background-position: center;
+  width: 36.67px;
+  height: 34.83px;
+  margin-left: 28%;
+  margin-top: 18px;
+  position: absolute;
+}
+
+.krug {
+  border-radius: 40px;
+  background-color: #D9D9D9;
+  width: 80px;
+  height: 80px;
+  margin-left: 110px;
+  margin-top: 40px;
+  position: relative;
+}
+.username {
+  width: 264px;
+  height: 24px;
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  margin-left: 17.5px;
+  margin-top: 10px;
+  color: #FFFFFF;
+
+}
+
+.list {
+  width: 164px;
+  height: 313px;
+  display: flex;
+  margin-top: 30px;
+  margin-left: 15px;
+}
+.icon1 {
+  background-image: url('../img/vector.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+
+}
+
+.icon2 {
+  background-image: url('../img/purch.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+  margin-top: 20px;
+}
+
+.icon3 {
+  background-image: url('../img/messeges.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+  margin-top: 20px;
+}
+
+.icon4 {
+  background-image: url('../img/favourite.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+  margin-top: 20px;
+}
+
+.icon5 {
+  background-image: url('../img/frend.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+  margin-top: 20px;
+}
+
+.icon6 {
+  background-image: url('../img/letter.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+  margin-top: 20px;
+}
+
+.icon7 {
+  background-image: url('../img/spam.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 26px;
+  height: 26px;
+  margin-top: 20px;
+}
+.link-menu{
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #000000DE;
+  margin-top: 22px;
+}
+.link-menu1{
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #000000DE;
+}
+.links{
+  margin-left: 20px;
+}
+.phoneMenuSide {
+  width: 360px;
+  height: 48px;
+  top: 1552px;
+  display: flex;
+  background-color: black;
+}
+.sideCl {
+  background-color: #212121;
+  height: 592px;
+  width: 60px;
+  border: 1px solid #282727;
+}
+.exit {
+  width: 24px;
+  height: 24px;
+  background-image: url('../img/ArrowsImg/exit.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  margin-left: 15px;
+  margin-top: 20px;
+}
+.phoneMenu {
+  width: 360px;
+  height: 48px;
+  top: 1552px;
+  display: flex;
 }
