--- a/css/burger_menu.css
+++ b/css/burger_menu.css
@@ -26,7 +26,7 @@ a:hover
 {
   display: block;
   position: relative;
-  top: 50px;
+  top: 28px;
   left: 50px;
 
   z-index: 1;
@@ -124,8 +124,9 @@ a:hover
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
+  height: 1300px;
 
-  background: #ededed;
+  background: rgba(0, 0, 0, 0.6);
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   /* to stop flickering of text in safari */
@@ -140,6 +141,36 @@ a:hover
 {
   padding: 10px 0;
   font-size: 22px;
+  color: white;
+}
+#menu a {
+  text-decoration: none; 
+  color: white; 
+  transition: color 0.3s;
+}
+#menu a:hover {
+  color: #007BFF; 
+}
+.menu-item {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 15px; 
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+}
+
+.menu-item a {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px; /* Відступ між текстом та іконкою */
+}
+
+.icon {
+  width: 16px; 
+  height: 16px;
+  margin-left: 10px; /* Відступ між іконкою та текстом */
 }
 
 /*
