--- a/css/burger_menu.css
+++ b/css/burger_menu.css
@@ -46,8 +46,8 @@ a:hover
 
   cursor: pointer;
 
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+  opacity: 0; 
+  z-index: 2; 
 
   -webkit-touch-callout: none;
 }
