--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 /* Сховуємо чекбокс */
 #menu__toggle {
   opacity: 0;
@@ -128,3 +129,61 @@
 .menu__item:hover {
   background-color: #f5f5f5;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+}
+
+.container {
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+  margin-bottom: 0px;
+  color: #333;
+}
+
+.tour-list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.tour-card {
+  position: relative; /* Це дозволить накладати текст на зображення */
+  width: 100%;
+  max-width: 600px;
+}
+
+.tour-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover; /* Забезпечує правильне масштабування зображення */
+}
+
+.tour-info {
+  position: absolute; /* Дозволяє елементу бути накладеним поверх іншого */
+  bottom: 0; /* Текст буде знаходитись внизу зображення */
+  left: 0;
+  right: 0;
+  background-color: rgba(18, 172, 34, 0.5); /* Прозорий чорний фон */
+  color: #fff; /* Білий колір тексту для контрасту */
+  padding: 10px;
+  text-align: left; /* Вирівнювання тексту по лівому краю */
+}
+
+.tour-info h2 {
+  font-size: 18px;
+  margin: 0;
+}
+
