--- a/css/main.css
+++ b/css/main.css
@@ -1,439 +1,165 @@
-.sidenav {
-  height: 100%; /* 100% Full-height */
-  width: 320px; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
-  top: 0; /* Stay at the top */
-  left: 0;
-  background: #fafafa;
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 0; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  overflow: hidden;
-}
-
-
-.sidenav a {
-  font-family: Roboto;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  text-align: left;
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  color: #000000de;
-  display: block;
-  transition: 0.3s;
-;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-  background-color: #575757;
-
-}
-
-.sidenav .closebtn {
-  position: relative;
-  top: 0px;
-  font-size: 36px;
-  margin: 0px;
-  padding: 10px 20px;
-  color: #ffffff; 
-  background-color: #333333;
-  padding-left: 280px;
-
-}
-#main {
-  transition: margin-left 0.5s;
-  padding: 30px;
-}
-
-.tour-card {
-  position: relative;
-  width: 100%;
-  max-width: 360px;
-  margin: 0 auto;
-  margin-bottom: 10px;
-  left: 5cm;
-}
-
-.tour-image {
-  position: relative;
-}
-
-.tour-image img {
-  margin-top: 10px;
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-.tour-title {
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  padding: 10px;
-  background-color: #39784e99;
-  color: white;
-  text-align: center;
-  font-size: 18px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-}
-
-.tour-actions {
-  display: flex;
-  gap: 10px;
-  justify-content: flex-end;
-  width: 100%;
-}
-
-.header span {
-  display: flex;
-  gap: 10px;
-  justify-content: flex-end;
-  width: 100%;
-  margin-right: 10px;
-}
-
-.action-icon {
-  width: 24px;
-  height: 24px;
-  display: block;
-}
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: #303030;
-  max-width: 360px;
-  margin: 0 auto;
-}
-
-.modal-content {
-  background-color: #303030;
-  margin: 0;
-  padding: 20px;
-  border: none;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  overflow: auto;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 36px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+:root {
+  --general-background-color: #303030;
+  --text-color: #fff;
+  --navbar-color: #000000;
 }
 
 body {
-  background-color: #303030;
-  position: absolute;
-  width: 360px;
-  height: 1800px;
-  left: 0px;
-  top: 0px;
-  max-width: 360px;
-  margin: 0 auto;
-}
-.header h1 {
-  color: #ffffff;
-}
-.header h1 :hover {
-  color: #f1f1f1;
-  background-color: #575757;
-}
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  background: #212121;
-  width: 100vw;
   margin: 0;
   padding: 0;
+  font-family: Roboto, sans-serif; 
 }
 
 .container {
-  position: relative;
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-.name {
-position: absolute;
-display: flex;
-padding-top: 140px;
-padding-left: 40px;
-color: rgb(255, 255, 255);
-font-size: 20px;
-z-index: 2;
-}
-.image-bottom {
-  position: relative;
-  top: 0;
-  left: 0px;
-  width: 320px;
-  height: 220px;
-  background: linear-gradient(246.63deg, #397872 2.69%, #819745 101.82%);
-}
-.image-top {
-  position: absolute;
-  top: 90px;
-  left: 45%;
-  transform: translateX(-50%);
-  width: 80px;
-  height: 80px;
-  z-index: 1;
-}
-.menu-item {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-bottom: 10px;
+  width: 90%; 
+  max-width: 360px; 
+  min-height: 100vh; 
+  background-color: var(--general-background-color);
+  margin: 0 auto; 
 }
 
-.menu-item a {
+a {
   text-decoration: none;
-  color: black;
-  margin-left: 10px;
+  color: var(--text-color);
 }
 
-.icon {
-  width: 16px; 
-  height: 16px;
-  margin-left: 20px;
-}
-.footer {
-margin-top: 20px;
-background-color: #212121;
-padding: 10px;
- width: 360px;
- height: 48px;
- top: 592px;
- gap: 0px;
- opacity: 0px;
-}
-body,
-html {
-  margin: 0 auto;
-  padding: 0;
-  max-width: 1200px;
-  width: 100%;
-
-}
-
-.reservButton {
-  width: 320px;
-  height: 42px;
-  left: 20px;
-  top: 1090px;
-  background: #39784e;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
-  border-radius: 2px;
-  border-radius: 2px;
-  gap: 0px;
-  color: #ffffff;
-  font-size: 20px;
-}
-
-.event {
-  width: 215px;
-  height: 24px;
-  left: 53px;
-  top: 1032px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
+.app_bar {
+  width: 100%; 
+  height: 70px;
+  background-color: #212121;
   display: flex;
-  align-items: center;
-  color: #6fb285;
+  align-items: center; 
 }
 
-.review {
-  display: flex;
-  align-items: center;
-  align-items: center;
-  justify-content: flex-start;
-  gap: 20px; 
+.menu {
+  background-image: url(../img/menu.png);
+  width: 70px;
+  height: 90px;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.review p {
+.menu, .share, .like, .back, .home, .recent:hover {
+  cursor: pointer;
+}
+
+.tour-title  {
+  width: 145px;
+  height: 40px;
+  color: var(--text-color);
+  margin-top: 20px;
   font-family: Roboto;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 22px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 23.44px;
   text-align: left;
-  box-sizing: border-box;
-  background: #757575;
-  display: inline-block;
-  display: inline-block;
-  border-radius: 0px 50px 40px 50px;
-  padding: 10px;
-  color: #ffffff;
 }
 
-.modal-content h2 {
-  width: 320px;
-  height: 24px;
-  left: 20px;
-  top: 625px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
-  color: #ffffff;
+.news-container {
+  width: calc(100% - 16px); 
+  height: auto; 
+  margin: 8px; 
+  border: 1px solid var(--general-background-color);
+  position: relative; 
 }
 
-.modal-content .tour-title {
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  padding: 10px;
-  background-color: #202020b2;
-  color: white;
-  text-align: center;
-  font-size: 18px;
-  font-weight: bold;
+.news-item-image1 {
+  background-image: url(../img/photo1.png);
+  margin-top: 30px;
+  background-size: cover; 
+  background-position: center; 
+}
+
+.flex-container {
+  width: auto; 
+  height: 68px;
+  background-color: #39784e99;
+  margin-top: 192px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
 }
-.event {
-  display: flex;
-  align-items: center;
-  gap: 15px; 
-  padding: 10px; 
-  margin-bottom: 15px;
-}
-.modal-content h3 {
-  left: 16px;
-  top: 393px;
-  font-family: "Roboto";
-  font-style: normal;
+
+.text {
+  width: 100%; 
+  height: auto; 
+  margin-left: 6px;
+  margin-top: 10px;
+  font-size: 18px;
   font-weight: 400;
-  font-size: 16px;
   line-height: 24px;
-  color: rgba(255, 255, 255, 0.7);
+  text-align: left;
+  color: var(--text-color);
 }
 
-
-@media only screen and (max-width: 360px) {
-  body {
-    width: 100%;
-    height: auto;
-  }
-
-  .sidenav {
-    width: 60%;
-  }
-
-  .tour-card {
-    max-width: 100%;
-  }
-
-  .reservButton {
-    width: 100%;
-  }
-
-  .header {
-    justify-content: center;
-    font-size: 14px;
-  }
-
-  .header span,
-  .tour-actions {
-    justify-content: center;
-  }
-
-  .modal-content h2 {
-    width: 100%;
-  }
-
-  .modal-content h3 {
-    font-size: 14px;
-  }
-
-  .tour-title {
-    font-size: 16px;
-    padding: 8px;
-  }
-
-  .review p {
-    width: 100%;
-  }
+.icon-buttons {
+  display: flex;
+  justify-content: flex-end; 
+  align-items: center; 
+  gap: 5px; 
+  padding-right: 10px; 
 }
 
-@media only screen and (max-width: 250px) {
-  body {
-    min-width: 250px;
-  }
+.like, .share {
+  width: 20px; 
+  height: 20px;
+  background-size: contain; 
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  .sidenav {
-    display: none;
-  }
+.like {
+  background-image: url(../img/favorite.png);
+  margin-right: 10px; 
+}
 
-  .tour-card {
-    max-width: 100%;
-  }
+.share {
+  background-image: url(../img/bounds.png);
+}
 
-  .reservButton {
-    width: 100%;
-    height: 36px;
-  }
+.news-item-image2, .news-item-image3, .news-item-image4, .news-item-image5 {
+  margin-top: 20px;
+  background-size: cover; 
+  background-position: center; 
+}
 
-  .header {
-    gap: 5px;
-    font-size: 12px;
-  }
+.news-item-image2 {
+  background-image: url(../img/photo2.png);
+}
 
-  .header span,
-  .tour-actions {
-    gap: 5px;
-    justify-content: center;
-  }
+.news-item-image3 {
+  background-image: url(../img/photo3.png);
+}
 
-  .modal-content h2 {
-    font-size: 14px;
-    width: 100%;
-  }
+.news-item-image4 {
+  background-image: url(../img/photo4.png);
+}
 
-  .modal-content h3 {
-    font-size: 12px;
-  }
+.news-item-image5 {
+  background-image: url(../img/photo5.png);
+}
 
-  .tour-title {
-    font-size: 14px;
-    padding: 5px;
-  }
+.navbar {
+  width: 100%; 
+  height: 48px;
+  background-color: var(--navbar-color);
+  margin-top: 70px;
+  display: flex;
+}
 
-  .review p {
-    font-size: 14px;
-    line-height: 20px;
-  }
+.manage-panel {
+  width: 120px;
+  height: 48px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.back {
+  background-image: url(../img/back.png);
+}
+
+.home {
+  background-image: url(../img/home.png);
+}
+
+.recent {
+  background-image: url(../img/recent.png);
 }
