--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     background-color: #303030;
@@ -38,6 +40,7 @@ header {
     overflow-x: hidden;
     transition: 0.4s;
     display: flex;
+    z-index: 10;
 }
 
 .menu-container {
@@ -116,26 +119,156 @@ header {
     background-image: url(../img/1.jpg);
     height: 190px;
 }
-.tour-description{
-    background-color: #39784e6a;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    
-}
-.tour-description p{
-    float: left;
-}
 #holidayTour{
     background-image: url(../img/holidayTour.png);
     background-size: cover;
 }
-.tours-container{
+#holidayTourOnPage{
+    background-image: url(../img/holidayTour.png);
+    background-size: cover;
+    height: 300px;
+}
+
+#MysteruZmiiniy{
+    background-image: url(../img/MysteryZmiiniyTour.png);
+    background-size: cover;
+}
+#SafariTour{
+    background-image: url(../img/SafariTour.png);
+    background-size: cover;
+}
+#MasterClass{
+    background-image: url(../img/MasterClass.png);
+    background-size: cover;
+}
+#QuestTour{
+    background-image: url(../img/QuestTour.png);
+    background-size: cover;
+}
+.tours-container {
     height: 320px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 30px;
+    margin-top: 20px;
+    position: relative; 
+    background-size: cover;
 }
-.tour-description img{
-    text-align: right;
+
+.tour-description {
+    background-color: rgba(57, 120, 78, 0.42);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: absolute; 
+    bottom: 0; 
+    padding: 10px;
+    box-sizing: border-box; 
+}
+
+.tour-description p {
+    margin: 0; 
+    color: white; 
+}
+
+.tour-description img {
+    margin-left: 10px; 
+    width: 24px; 
+    height: 24px;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+#TourHeader{
+    background-color: #212121;
+    display: flex;
+    justify-content: space-between;
+}
+#TourName{
+    font-size: 25px;
+}
+#interDivTour{
+    background-color: #2020209e;
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    position: absolute; 
+    bottom: 0; 
+    padding: 10px;
+    box-sizing: border-box; 
+}
+#holidayTourOnPage{
+    position: relative; 
+    background-size: cover;
+}
+#TourDescText{
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+    font-size: 20px;
+    color: #FFFFFFB2;
+}
+#firstComment{
+    float: left;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#secondComment{
+    float: left;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#firstCommentText{
+    text-align: left;
+    padding-left: 20px;
+    margin-left: 70px;
+    background-color: #757575;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: 320px;
+}
+#secondCommentText{
+    text-align: left;
+    padding-left: 20px;
+    margin-left: 70px;
+    background-color: #757575;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: 320px;
+    height: 40px;
+}
+#FeedBacks{
+    margin-left: 20px;
+    color: white;
+}
+.one{
+    color: #FFFFFFB2;
+}
+p{
+    color: white;
+}
+.ImgUnderComment{
+    float: left;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+.usefukInform{
+    color: #6FB285;
+    font-size: 20px;
+}
+#lastButton{
+    background-color: #6FB285;
+    color: white;
+    width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 50px;
+    font-size: 20px;
+    
+}
+#ThisDIV{
+    display: flex;
+    justify-content: center;
 }
