--- a/1-4 Moshnikov/css/main.css
+++ b/1-4 Moshnikov/css/main.css
@@ -1,357 +1,401 @@
+
 :root {
-    --background-light: #fafafa;
-    --background-dark: #303030;
-    --text-dark: #000000de;
-    --text-light: #ffffff;
-    --primary-color: #07f03644;
-    --hover-color: #f1f1f1;
-    --secondary-color: #202020b2;
-    --overlay-color: rgba(255, 255, 255, 0.7);
-  
-    --font-family: "Roboto";
-    --font-size-default: 16px;
-    --font-size-large: 18px;
-    --font-weight-regular: 400;
-    --font-weight-medium: 500;
-    --line-height-default: 24px;
-  
-    --padding-top-large: 60px;
-    --padding-top-small: 10px;
-    --padding-default: 20px;
-    --padding-card: 10px;
-    --padding-modal: 20px;
-  
-    --transition-time-default: 0.5s;
-    --transition-hover: 0.3s;
-  
-    --max-width-card: 360px;
-    --icon-size: 24px;
-    --body-width: 360px;
-    --button-width: 320px;
-    --button-height: 42px;
-  }
-  
-  body,
-  html {
-    margin: 0;
-    padding: 0;
-    max-width: var(--body-width);
-    margin: 0 auto;
-    background-color: var(--background-dark);
-  }
-  
-  .sidenav a {
-    font-family: var(--font-family);
-    font-size: var(--font-size-default);
-    font-weight: var(--font-weight-medium);
-    line-height: var(--line-height-default);
-    text-align: left;
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    color: var(--text-dark);
-    display: block;
-    transition: var(--transition-hover);
-  }
-  
-  .sidenav a:hover {
-    color: var(--hover-color);
-  }
-  
-  .tour-card {
-    position: relative;
-    width: 100%;
-    max-width: var(--max-width-card);
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-  
-  .tour-image img {
-    margin-top: var(--padding-top-small);
-    width: 100%;
+  --background-light: #fafafa;
+  --background-dark: #303030;
+  --text-dark: #000000de;
+  --text-light: #ffffff;
+  --primary-color: #07f03644;
+  --hover-color: #f1f1f1;
+  --secondary-color: #202020b2;
+  --overlay-color: rgba(255, 255, 255, 0.7);
+
+  --font-family: "Roboto";
+  --font-size-default: 16px;
+  --font-size-large: 18px;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --line-height-default: 24px;
+
+  --padding-top-large: 60px;
+  --padding-top-small: 10px;
+  --padding-default: 20px;
+  --padding-card: 10px;
+  --padding-modal: 20px;
+
+  --transition-time-default: 0.5s;
+  --transition-hover: 0.3s;
+
+  --max-width-card: 360px;
+  --icon-size: 24px;
+  --body-width: 360px;
+  --button-width: 320px;
+  --button-height: 42px;
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  max-width: var(--body-width);
+  margin: 0 auto;
+  background-color: var(--background-dark);
+}
+
+.sidenav a {
+  font-family: var(--font-family);
+  font-size: var(--font-size-default);
+  font-weight: var(--font-weight-medium);
+  line-height: var(--line-height-default);
+  text-align: left;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  color: var(--text-dark);
+  display: block;
+  transition: var(--transition-hover);
+}
+
+.sidenav a:hover {
+  color: var(--hover-color);
+}
+
+.tour-card {
+  position: relative;
+  width: 100%;
+  max-width: var(--max-width-card);
+  margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+.tour-image img {
+  margin-top: var(--padding-top-small);
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+
+.tour-title {
+
+  background-color: var(--primary-color);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: var(--padding-card);
+  color: var(--text-light);
+  text-align: center;
+  font-size: var(--font-size-large);
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.tour-actions {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 20px;
+  background: #212121;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container h1 {
+  color: var(--text-light);
+}
+
+.container span {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  width: 100%;
+  margin-right: 10px;
+}
+
+.action-icon {
+  width: var(--icon-size);
+  height: var(--icon-size);
+  display: block;
+}
+
+.close {
+  margin-right: 10px;
+  font-size: 30px;
+  cursor: pointer;
+  color: var(--text-light);
+  text-decoration: none;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.reservButton {
+  width: var(--button-width);
+  height: var(--button-height);
+  background: var(--primary-color);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 2px;
+}
+
+.event {
+  font-family: var(--font-family);
+  font-size: var(--font-size-default);
+  font-weight: var(--font-weight-regular);
+  line-height: var(--line-height-default);
+  display: flex;
+  align-items: center;
+  color: #6fb285;
+}
+.review {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 20px;
+}
+
+.review p {
+  font-family: var(--font-family);
+  font-size: var(--font-size-default);
+  font-weight: var(--font-weight-regular);
+  line-height: 22px;
+  text-align: left;
+  box-sizing: border-box;
+  background: #757575;
+  display: inline-block;
+}
+
+.modal-content h2 {
+  width: var(--button-width);
+  height: 24px;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-large);
+  line-height: var(--line-height-default);
+  color: var(--text-light);
+}
+
+.modal-content .tour-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: var(--padding-card);
+  background-color: var(--secondary-color);
+  color: var(--text-light);
+  text-align: center;
+  font-size: var(--font-size-large);
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+}
+
+.modal-content h3 {
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-regular);
+  font-size: var(--font-size-default);
+  line-height: var(--line-height-default);
+  color: var(--overlay-color);
+}
+
+@media only screen and (max-width: 360px) {
+  body {
+    width: 360px;
     height: auto;
-    display: block;
   }
-  
-  
-  .tour-title {
-    
-    background-color: var(--primary-color);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: var(--padding-card);
-    color: var(--text-light);
-    text-align: center;
-    font-size: var(--font-size-large);
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+
+  .sidenav {
+    width: 60%;
   }
-  
-  .tour-actions {
-    display: flex;
-    gap: 10px;
-    justify-content: flex-end;
-    width: 100%;
+
+  .tour-card {
+    max-width: 100%;
   }
-  
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    gap: 20px;
-    background: #212121;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container h1 {
-    color: var(--text-light);
-  }
-  
-  .container span {
-    display: flex;
-    gap: 10px;
-    justify-content: flex-end;
-    width: 100%;
-    margin-right: 10px;
-  }
-  
-  .action-icon {
-    width: var(--icon-size);
-    height: var(--icon-size);
-    display: block;
-  }
-  
-  .close {
-    margin-right: 10px;
-    font-size: 30px;
-    cursor: pointer;
-    color: var(--text-light);
-    text-decoration: none;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
+
   .reservButton {
-    width: var(--button-width);
-    height: var(--button-height);
-    background: var(--primary-color);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.24);
-    border-radius: 2px;
+    width: 100%;
   }
-  
-  .event {
-    font-family: var(--font-family);
-    font-size: var(--font-size-default);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-default);
-    display: flex;
-    align-items: center;
-    color: #6fb285;
-  }
-  .review {
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    gap: 20px;
-  }
-  
-  .review p {
-    font-family: var(--font-family);
-    font-size: var(--font-size-default);
-    font-weight: var(--font-weight-regular);
-    line-height: 22px;
-    text-align: left;
-    box-sizing: border-box;
-    background: #757575;
-    display: inline-block;
-  }
-  
-  .modal-content h2 {
-    width: var(--button-width);
-    height: 24px;
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-regular);
-    font-size: var(--font-size-large);
-    line-height: var(--line-height-default);
-    color: var(--text-light);
-  }
-  
-  .modal-content .tour-title {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: var(--padding-card);
-    background-color: var(--secondary-color);
-    color: var(--text-light);
-    text-align: center;
-    font-size: var(--font-size-large);
-    font-weight: bold;
-    display: flex;
-    align-items: center;
+
+  .container {
     justify-content: center;
-    gap: 10px;
-    
+    font-size: 14px;
   }
-  
+
+  .container span,
+  .tour-actions {
+    justify-content: center;
+  }
+
+  .modal-content h2 {
+    width: 100%;
+  }
+
   .modal-content h3 {
-    font-family: var(--font-family);
-    font-weight: var(--font-weight-regular);
-    font-size: var(--font-size-default);
-    line-height: var(--line-height-default);
-    color: var(--overlay-color);
+    font-size: 14px;
   }
-  
-  @media only screen and (max-width: 360px) {
-    body {
-      width: 360px;
-      height: auto;
-    }
-  
-    .sidenav {
-      width: 60%;
-    }
-  
-    .tour-card {
-      max-width: 100%;
-    }
-  
-    .reservButton {
-      width: 100%;
-    }
-  
-    .container {
-      justify-content: center;
-      font-size: 14px;
-    }
-  
-    .container span,
-    .tour-actions {
-      justify-content: center;
-    }
-  
-    .modal-content h2 {
-      width: 100%;
-    }
-  
-    .modal-content h3 {
-      font-size: 14px;
-    }
-  
-    .tour-title {
-      font-size: 16px;
-      padding: 8px;
-    }
-  
-    .review p {
-      width: 100%;
-    }
+
+  .tour-title {
+    font-size: 16px;
+    padding: 8px;
   }
-  
-  @media only screen and (max-width: 250px) {
-    body {
-      min-width: 250px;
-    }
-  
-    .sidenav {
-      display: none;
-    }
-  
-    .tour-card {
-      max-width: 100%;
-    }
-  
-    .reservButton {
-      width: 100%;
-      height: 36px;
-    }
-  
-    .container {
-      gap: 5px;
-      font-size: 12px;
-    }
-  
-    .container span,
-    .tour-actions {
-      gap: 5px;
-      justify-content: center;
-    }
-  
-    .modal-content h2 {
-      font-size: 14px;
-      width: 100%;
-    }
-  
-    .modal-content h3 {
-      font-size: 12px;
-    }
-  
-    .tour-title {
-      font-size: 14px;
-      padding: 5px;
-    }
-  
-    .review p {
-      font-size: 14px;
-      line-height: 20px;
-    }
+
+  .review p {
+    width: 100%;
   }
-  
-  #sidenavbtn {
-    display: none;
+}
+
+@media only screen and (max-width: 250px) {
+  body {
+    min-width: 250px;
   }
-  
+
   .sidenav {
     display: none;
-    background-color: #fafafa;
-    position: fixed;
-    top: 0;
-    left: auto;
-    width: 250px;
-    height: 100%;
-    z-index: 1000;
-    transform: translateX(-100%);
-    transition: transform 1s ease;
   }
-  
-  #sidenavbtn:checked ~ .sidenav {
-    display: inline;
-    transform: translateX(0);
+
+  .tour-card {
+    max-width: 100%;
   }
-  
-  .menu-icon {
-    position: relative;
-    z-index: 2000;
-    cursor: pointer;
-    background-color: 212121;
+
+  .reservButton {
+    width: 100%;
+    height: 36px;
   }
-  
-  .image-container {
-    position: relative;
-    width: 250px;
+
+  .container {
+    gap: 5px;
+    font-size: 12px;
   }
-  
-  .image-bottom {
-    background: #6fb285;
+
+  .container span,
+  .tour-actions {
+    gap: 5px;
+    justify-content: center;
+  }
+
+  .modal-content h2 {
+    font-size: 14px;
     width: 100%;
   }
-  
-  .image-top {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100px;
-    height: 100px;
+
+  .modal-content h3 {
+    font-size: 12px;
   }
+
+  .tour-title {
+    font-size: 14px;
+    padding: 5px;
+  }
+
+  .review p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+#sidenavbtn {
+  display: none;
+}
+
+.sidenav {
+  display: none;
+  background-color: #fafafa;
+  position: fixed;
+  top: 0;
+  left: auto;
+  width: 250px;
+  height: 100%;
+  z-index: 1000;
+  transform: translateX(-100%);
+  transition: transform 1s ease;
+}
+
+#sidenavbtn:checked ~ .sidenav {
+  display: inline;
+  transform: translateX(0);
+}
+
+.menu-icon {
+  position: relative;
+  z-index: 2000;
+  cursor: pointer;
+  background-color: 212121;
+}
+
+.image-container {
+  position: relative;
+  width: 250px;
+}
+
+.image-bottom {
+  background: #6fb285;
+  width: 100%;
+}
+
+.image-top {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 100px;
+}
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 24px; 
+  height: 24px;
+  background-color: transparent; 
+  color: white; 
+  font-size: 18px; 
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+   
+}
+
+
+
+.tour-link {
+  text-decoration: none; 
+  color: inherit; 
+}
+
+.tour-title {
+  background-color: var(--primary-color);
+  color: var(--text-light); 
+  font-size: var(--font-size-large);
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: var(--padding-card);
+  gap: 10px;
+}
+.like-icon {
+  transition: filter 0.3s ease;
+}
+
+.like-icon.liked {
+  filter: brightness(0) saturate(100%) invert(22%) sepia(90%) saturate(7500%) hue-rotate(357deg) brightness(100%) contrast(106%);
+}
